Hook up CSS/Sass files

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
+  "eslintConfig": {
+  "extends": "react-app"
+  },
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "15.4.2",
